--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jarvis — AI-Powered Wellness & Productivity Assistant</title>
-  <meta name="description" content="Jarvis is your AI-powered personal wellness and productivity assistant. 17 powerful tools in one intelligent companion. Built by CiviTech Global.">
+  <meta name="description" content="Jarvis is your AI-powered personal wellness and productivity assistant. 17 powerful tools in one intelligent companion. Built by CiviTech Official.">
   <meta name="theme-color" content="#FF7A2F">
 
   <!-- Open Graph -->
@@ -30,14 +30,15 @@
   <!-- ===== NAVIGATION ===== -->
   <nav class="nav">
     <div class="container">
-      <a href="#" class="nav-brand">
+      <a href="index.html" class="nav-brand">
         <img src="assets/images/jarvis-logo.svg" alt="Jarvis Logo">
         <span>Jarvis</span>
       </a>
       <div class="nav-links">
-        <a href="#features">Features</a>
-        <a href="#showcase">Screenshots</a>
-        <a href="#about">About</a>
+        <a href="index.html#features">Features</a>
+        <a href="careers.html">Careers</a>
+        <a href="locations.html">Locations</a>
+        <a href="investors.html">Investors</a>
       </div>
       <button class="hamburger" aria-label="Toggle menu">
         <span></span>
@@ -46,9 +47,10 @@
       </button>
     </div>
     <div class="mobile-menu">
-      <a href="#features">Features</a>
-      <a href="#showcase">Screenshots</a>
-      <a href="#about">About</a>
+      <a href="index.html#features">Features</a>
+      <a href="careers.html">Careers</a>
+      <a href="locations.html">Locations</a>
+      <a href="investors.html">Investors</a>
     </div>
   </nav>
 
@@ -491,7 +493,7 @@
       <img src="assets/images/jarvis-logo.svg" alt="Jarvis" class="cta-logo">
       <h2>Ready to Transform Your Daily Routine?</h2>
       <p>Jarvis brings together wellness tracking, productivity tools, and AI intelligence into one beautiful app. Your personal assistant is waiting.</p>
-      <p class="company">Built with care by <strong>CiviTech Global</strong></p>
+      <p class="company">Built with care by <strong>CiviTech Official</strong></p>
     </div>
   </section>
 
@@ -503,12 +505,12 @@
         <span>Jarvis</span>
       </div>
       <div class="footer-links">
-        <a href="#home">Home</a>
-        <a href="#features">Features</a>
-        <a href="#showcase">Screenshots</a>
-        <a href="#about">About</a>
+        <a href="index.html">Home</a>
+        <a href="careers.html">Careers</a>
+        <a href="locations.html">Locations</a>
+        <a href="investors.html">Investors</a>
       </div>
-      <p class="footer-copy">&copy; 2026 Jarvis by CiviTech Global. All rights reserved.</p>
+      <p class="footer-copy">&copy; 2026 Jarvis by CiviTech Official. All rights reserved.</p>
     </div>
   </footer>
 
